Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-1180

C++: Fix behaviour of num_children element of primitive nodes

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • cpp-1.3.1
    • cpp-1.4.0
    • parquet-cpp
    • None

    Description

      Per the parquet.thift spec, for primitive nodes the num_children schema
      attibute should remain unset. This is implemeted correctly in parquet-mr
      see [1]. However currently parquet-cpp does set the num_children
      attribute to 0 if it is a primitive node. This pull requests fixes this
      issue and the tests that were relying on this behavior

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              uwe Uwe Korn
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: